# distributed-task-management

./: CMakeLists.txt  DatabaseManager.cpp  HttpServer.cpp  Makefile  README.md  app.py  index.html  main.cpp  task_manager  taskmaster.db
config/: DatabaseManager.h
controllers/: ApiController.h  NotificationController.h  ProjectController.h  TaskController.h  UserController.h
frontend/: index.html
frontend-basic/: index.html  script.js
frontend-react/: package-lock.json  package.json
frontend/public/: index.html  styles.css
include/: DatabaseManager.h  FIFOScheduler.h  LoadBalancedScheduler.h  Node.h  RoundRobinScheduler.h  Scheduler.h  Task.h  TaskManager.h  loadbalancer.h  loggingservice.h  messagequeue.h  monitor.h  scheduler.h  task.h  taskhistory.h  taskmanager.h  user.h  workernode.h
models/: ApiController.cpp  Notification.h  Project.h  Role.cpp  Role.h  Task.h  TaskAttachment.h  TaskComment.h  TaskFactory.h  User.cpp  User.h
observers/: NotificationObserver.cpp  NotificationObserver.h
proxy/: app.py  package-lock.json  package.json  server.js
server/: HttpServer.h
src/: DatabaseManager.cpp  FIFOScheduler.cpp  LoadBalancedScheduler.cpp  Node.cpp  RoundRobinScheduler.cpp  Task.cpp  TaskManager.cpp  loadbalancer.cpp  loggingservice.cpp  main.cpp  messagequeue.cpp  monitor.cpp  scheduler.cpp  task.cpp  task.h  taskhistory.cpp  taskmanager.cpp  taskmanager.h  user.cpp  workernode.cpp  workernode.h
strategies/: TaskPriorityStrategy.cpp  TaskPriorityStrategy.h
task-manager-frontend/: package-lock.json  package.json
templates/: index.html
(+10 files in other folders)
